# wafer-defect-lab

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  pyproject.toml  requirements-cu128.txt  requirements.txt
.github/workflows/: docker-image.yml
configs/anomaly/: wm811k.yaml
configs/data/: wm811k.yaml
configs/modal/: README.md
configs/train/: wm811k.yaml  wm811k_dataloader.yaml  wm811k_hope_hybrid.yaml  wm811k_resnet_baseline.yaml
data/interim/: README.md
prompts/: caformer_nested_token_vs_pooled_continual.prompt.md  data_imbalance_autonomous_search.prompt.md  nested_cms_aggressive_search.prompt.md  resnet50_multiclass_improvement_search.prompt.md  vit_multiclass_autonomous_search.prompt.md
research_logs/: 00_project_timeline.md  README.md
research_logs/_templates/: phase_log.md  thread_overview.md
research_logs/nested_learning/: 00_overview.md  phase_a_tokenized_nested_selfmod.md  phase_b_detokenized_cms_resnet.md  phase_c_kd_bias_correction.md  (+1 more)
scripts/: clean_ensemble_calibration.py  crt_retrain.py  crt_sweep.py  crt_sweep_vit.py  docker_train_local.sh  eval_classifier.py  export_report.py  fetch_outputs.sh  posthoc_calibration.py  prepare_data.py  process_data.py  remote_train.sh  run_cms_resnet_search.sh  run_phase_c.py  run_phase_e_screening.sh  run_resnet50_search.py  run_train.sh  train_classifier.py  train_continual.py  tune_threshold.py  visualize_cam.py
scripts-remote/: deploy.py  fetch_all_output.py  fetch_weights.py  remote_run.py  train.py
src/waferlab/: config.py  (+2 more)
tests/: test_caformer_hope.py
(+207 files in other folders)
